--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2024"
 default = ["ue4"]
 ue4 = []
 ue5 = []
-egui = []
+egui = ["dep:egui"]
+
+[dependencies.egui]
+version = "^0.29.0"
+optional = true
